--- a/OfO/OfO/Base.lproj/Main.storyboard
+++ b/OfO/OfO/Base.lproj/Main.storyboard
@@ -651,7 +651,10 @@
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="1bB-YW-hmF"/>
                                             <constraint firstAttribute="height" constant="70" id="ZaQ-k8-KwZ"/>
                                         </constraints>
-                                        <state key="normal" image="btn_enableTorch"/>
+                                        <state key="normal" image="btn_unenableTorch"/>
+                                        <connections>
+                                            <action selector="flashBtnClick:" destination="B8a-yA-mgX" eventType="touchUpInside" id="0BA-sF-IkS"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Lx-gL-9ed">
                                         <rect key="frame" x="127" y="10" width="1" height="54"/>
@@ -666,7 +669,10 @@
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="3TV-iR-uPH"/>
                                             <constraint firstAttribute="height" constant="70" id="n6P-xI-Vc1"/>
                                         </constraints>
-                                        <state key="normal" image="voice_icon"/>
+                                        <state key="normal" image="voiceopen"/>
+                                        <connections>
+                                            <action selector="voiceBtnClick:" destination="B8a-yA-mgX" eventType="touchUpInside" id="El9-fq-D4B"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -685,7 +691,9 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="flashBtn" destination="mHA-FR-jQP" id="wJ2-xG-aWI"/>
                         <outlet property="inputTF" destination="9zc-B3-uaV" id="gDS-Pj-vAu"/>
+                        <outlet property="voiceBtn" destination="XYU-rf-AoC" id="BWZ-JT-Cal"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gec-TM-yqB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -734,7 +742,7 @@
         <image name="HomePage_UserGuide" width="20" height="20"/>
         <image name="RedPacketBike" width="340" height="135"/>
         <image name="UserInfo_defaultIcon" width="120" height="120"/>
-        <image name="btn_enableTorch" width="21" height="21"/>
+        <image name="btn_unenableTorch" width="12" height="19"/>
         <image name="inputBlikeNo" width="12" height="19"/>
         <image name="inputPageImage" width="340" height="117"/>
         <image name="leftBottomImage" width="40" height="40"/>
@@ -742,7 +750,7 @@
         <image name="rightBottomImage" width="40" height="40"/>
         <image name="torch_close_icon" width="21" height="21"/>
         <image name="userBikeImage" width="100" height="100"/>
-        <image name="voice_icon" width="21" height="21"/>
+        <image name="voiceopen" width="45" height="45"/>
         <image name="whiteImage" width="375" height="125"/>
     </resources>
 </document>
